--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Yuwei HE
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Software Engineer/Web Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: http://7xqyb5.com1.z0.glb.clouddn.com/tiger.svg
 
 #
 # Flags below are optional
