--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: http://7xqyb5.com1.z0.glb.clouddn.com/tiger.svg
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: heyuwei0305@126.com
   facebook:
   flickr:
   github: heisaman
@@ -26,7 +26,7 @@ footer-links:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: Heisaman_1
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -34,7 +34,7 @@ footer-links:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus:
+disqus: heisaman
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
