add foot social media icons

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: http://7xqyb5.com1.z0.glb.clouddn.com/tiger.svg
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: heyuwei0305@126.com
+  email:
   facebook:
   flickr:
   github: heisaman
@@ -30,6 +30,8 @@ footer-links:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
+  weibo: heisaman
+  wechat: heisaman
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
