--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,17 @@ footer-links:
   weibo: heisaman
   wechat: heisaman
 
+# Staticman configurations
+staticman:
+  allowedFields: ['name', 'email', 'comment']
+  branch: 'master'
+  filename: entry{@timestamp}
+  format: 'json'
+  moderation: false
+  path: _data/posts/{fields.name}
+  requiredFields: ['name', 'comment']
+  transforms:
+    email: 'md5'
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
