--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-markdown: redcarpet
+# markdown: redcarpet
 highlighter: pygments
 permalink: /:title/
 
