--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ highlighter: rouge
 # Paginate
 paginate: 10
 
-
+url: http://blog.plus1s.cn
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
