Add a new blog.

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ authors:
       name:           波斯王子
       site:           https://www.plus1s.cn
       avatar:         /assets/images/avatar1.jpg
-      bio:            "去法国留过两年学的普通工程师一枚…Drop out or study English. It’s your best bet."
+      bio:            "Just do it, now or never."
       email:          heyuwei.efrei@gmail.com
       twitter:        https://www.twitter.com/Heisaman_1
 
