--- a/_config.yml
+++ b/_config.yml
@@ -63,3 +63,4 @@ url: http://blog.plus1s.cn
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
+# encoding: chcp 65001
