Add new contents

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ authors:
       name:           波斯王子
       site:           https://www.plus1s.cn
       avatar:         /assets/images/avatar1.jpg
-      bio:            "去读书吧，做一名高玩:wink:"
+      bio:            "去读书吧，发现不一样的世界！😉"
       email:          heyuwei.efrei@gmail.com
       twitter:        https://www.twitter.com/Heisaman_1
 
